Fixed menu dropdown issues and clippath glitch

--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -89,7 +89,9 @@
     text-align: right;
     flex-direction: column;
   
-    a {
+    a,
+    span,
+    div.dropdown {
       display: block;
     }
   }
@@ -112,7 +114,16 @@
     padding-right: calc((100vw - $content_max_width) / 2);
     align-self: flex-end;
     height: 50px;
-    clip-path: polygon(50px 0, 100% 0%, 100% 100%, 0% 100%);
+
+    &::before {
+      content: "";
+      height: 100%;
+      width: 52px;
+      background: $secondary;
+      position: absolute;
+      left: -52px;
+      clip-path: polygon(50px 0, 100% 0%, 100% 100%, 0% 100%);
+    }
 }
 
 
